<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity"

    >

    <TextView
        android:id="@+id/tv1"
        android:layout_width="215dp"
        android:layout_height="109dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="50dp"
        android:text="@string/nicol_s"
        android:fontFamily="cursive"
        android:textColor="@color/colorwhite"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="180dp"
        android:layout_height="256dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="73dp"
        app:srcCompat="@drawable/sublogo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="271dp"
        android:layout_height="110dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:fontFamily="casual"
        android:text="@string/bienvenido_a_nicol_s_sientace_en_casa"
        android:textAlignment="center"
        android:textColor="@color/colorwhite"
        android:textSize="24sp" tools:targetApi="jelly_bean"/>

</RelativeLayout>